Fix dark mode colors

--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,7 @@ div.wrapper{
 	background-color: #ffffff;
 }
 
+
 @media (prefers-color-scheme: light) {
 	.darkwrapper {
 		background-color: #ffffff;
@@ -19,11 +20,16 @@ div.wrapper{
 @media (prefers-color-scheme: dark) {
 	.darkwrapper {
 		background-color: black;
-		color: white;
+		color: #A49D91;
 	}
-	a:link, a:visited {
+	button, input[type=submit] {
+		background-color: #612784;
 		color: white;
-		text-decoration: underline white;
+		border: #612784;
+	}
+	input[type="text"] {
+		color: white;
+		border: 1px solid #A49D91;
 	}
 }
 
